base/apidemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apidemo
  name: apidemo
  labels:
    app: apidemo
spec:
  type: NodePort
  ports:
    - name: apidemoport
      port: 10088
      targetPort: 10088
      nodePort: 30180
  selector:
    app: apidemo
