base/apidemo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apidemo                    #自定义ingress名称
  namespace: apidemo
spec:
  ingressClassName: nginx
  rules:
    - host: apidemo.test.com                   # 自定义域名
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apidemo     # 对应上面创建的service名称
                port:
                  number: 10088
